k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-deployment
  labels:
    app: fastapi-api
spec:
  selector:
    app: fastapi-api
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
